--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="library_add">收藏</string>
     <string name="personalized_playlist">专属歌单</string>
     <string name="album">专辑</string>
+    <string name="mv">MV</string>
     <string name="playlists">歌单</string>
     <string name="song">歌曲</string>
     <string name="voice_list">播客</string>
